# AutoPulse

./: .gitattributes  .gitignore  404.html  README.md  devenv.nix  index.html  mkdocs.yml  sitemap.xml
assembly/: README.md  (+1 more)
assembly/calibration/: index.html  pyproject.toml
assembly/calibration/images/: focus_point_calibration.odg
pulsecontrol/: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-requirements  LICENSE  README.md  calibration  devenv.nix  devenv.yaml  docker-compose.privileged.yml  docker-compose.yml  flake.nix  justfile  pyproject.toml  pyrightconfig.json
pulsecontrol/.run/: Server.run.xml
pulsecontrol/configuration/alternating/: physical_measurements.json
pulsecontrol/configuration/alternating_with_homing/: physical_measurements.json
pulsecontrol/configuration/camera_local/: camera_measurements.json
pulsecontrol/configuration/camera_remote/: camera_measurements.json
pulsecontrol/configuration/esp32/: advanced_attacker.json
pulsecontrol/configuration/simple_target_large/: basic.json
pulsecontrol/configuration/simple_target_small_probe/: basic.json
pulsecontrol/configuration/spc/: advanced_attacker.json  bam.json
pulsecontrol/configuration/tinystep_stepback/: physical_measurements.json
pulsecontrol/configuration/tinysteps/: physical_measurements.json
pulsecontrol/configuration/wip_autofocus_test/: wip_camera_autofocus.json
pulsecontrol/data/clean/: abs_step_back_0.001.csv  abs_step_back_0.005.csv  abs_step_back_0.01.csv  abs_step_back_0.05.csv  abs_step_back_0.1.csv  abs_step_back_0.5.csv  abs_step_back_1.0.csv  outliers.txt  rel_direct_0.001.csv  rel_direct_0.005.csv  rel_direct_0.01.csv  rel_direct_0.05.csv  rel_direct_0.1.csv  rel_direct_0.5.csv  rel_direct_1.0.csv
pulsecontrol/data/with_outliers/: README.md  abs_step_back_0.001.csv  abs_step_back_0.005.csv  abs_step_back_0.01.csv  abs_step_back_0.05.csv  abs_step_back_0.1.csv  abs_step_back_0.5.csv  abs_step_back_0.5_low_speed.csv  abs_step_back_1.csv  rel_direct_0.001.csv  rel_direct_0.005.csv  rel_direct_0.01.csv  rel_direct_0.05.csv  rel_direct_0.1.csv  rel_direct_0.5.csv  rel_direct_1.csv
pulsecontrol/scripts/: accumulative.py  bar_steps_until_change.py  combine.py  data_conversion.py  display_image.py  histogram.py  image_data_conversion.py  injection_image.py  line_plot.py  line_plot_gradient.py  scatter_cam.py  shouter.py  violin_plot.py  violin_plot_alternating.py  violin_plot_cam.py  violin_plot_split.py
pulsecontrol/test/: test_config_loader.py
(+131 files in other folders)
