[project]
name = "pulsecontrol"
version = "0.1.0"
description = "Software to control and coordinate movement platform, fault-injection device and DUT-communication."
authors = [{ name = "Maximilian Staab", email = "staab@fzi.de" }]
dependencies = [
    "picamera2>=0.3.18",
    "bs4>=0.0.2",
    "aiohttp>=3.9.3",
    "arrow>=1.3.0",
    "gunicorn>=21.2.0",
    "flask>=3.0.2",
    "dacite>=1.8.1",
    "more-itertools>=10.2.0",
    "requests>=2.31.0",
    "moonraker-api>=2.0.5",
    "chipshouter>=1.1.0",
    "numpy>=1.26.4",
    "tqdm>=4.66.2",
    "pyserial>=3.5",
    "gpiozero>=2.0.1",
    "chipwhisperer>=5.7.0",
    "rpi-libcamera>=0.1a4; platform_machine == 'aarch64'",
    "rpi-kms>=0.1a1; platform_machine == 'aarch64'",
    "opencv-contrib-python>=4.9.0.80",
    "retry>=0.9.2",
]
readme = "README.md"
requires-python = ">= 3.11"
license = { file = "./LICENSE" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye.scripts]
start = "gunicorn -w 1 -b 0.0.0.0:5000 pulsecontrol.main:app"
chip-image = { call = "scripts.images.take_undistorted:take" }

[tool.rye]
managed = true
dev-dependencies = [
  "pre-commit>=3.7.0",
  "pytest>=8.1.1",
  "matplotlib>=3.8.3",
  "requests-mock>=1.12.1",
  "pytest-mock>=3.14.0",
  "ruff>=0.3.5",
  "seaborn>=0.13.2",
  "pandas>=2.2.1",
  "scipy>=1.13.0",
  "bandit>=1.7.8",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pulsecontrol"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"
