[project]
name = "scripts"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Maximilian Staab", email = "staab@fzi.de" }]
dependencies = [
  "opencv-python>=4.9.0.80",
  "opencv-contrib-python>=4.9.0.80",
  "click>=8.1.7",
]
readme = "README.md"
requires-python = ">= 3.9"

[project.scripts]
"calibration" = "calibration:calibration"
"generate" = "calibration:generate"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/calibration"]
